# HermesCLI

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  Hermes.drawio  LICENSE  README.md  TASKS.md  USE_CASES.md  aider.sh  hermes.py  pyproject.toml  requirements.txt  setup.py  tasks.py  todos.md  uv.toml
1. src/hermes/workflows/: __init__.py
2. src/hermes/workflows/: parser.py
design_docs/: CLI argument extensions.md  CLI_argument_extensions_alternatives.md  prompt_formatter_redesign.md
design_documents/: config_handling_improvement.md  config_handling_improvement_requirements.md  prefills_design.md
docs/: philosophy.md  return vs context.md  tasks.md  workflow_specification.md
docs/tasks/: permanent_researchers_design.md
docs/tasks/1/: design.md
docs/tasks/7/: hld.md
feature_experiments/ui/: options.py
hermes/: application_initializer.py  application_orchestrator.py  cli_parser.py  components_container.py  config_manager.py  config_utils.py  core_components_builder.py  engine.py  event.py  exa_client.py  extensions_loader.py  history.py  json_config_manager.py  main.py  message.py  mocked_research.py  participants.py  participants_factory.py  utils_command_executor.py
hermes/chat/: assistant_mode_manager.py  conversation_orchestrator.py  engine.py  event.py  event_handler.py  file_operations_handler.py  history.py  message.py  participants.py
hermes/chat/events/: __init__.py  base.py  history_recovery_event.py  message_event.py  notification_event.py  raw_content_event.py
hermes/chat/interface/: __init__.py
hermes/chat/messages/: __init__.py  base.py  command.py  deserialization.py  file.py  media.py  text.py  text_generator.py  thinking_and_response.py  url.py
hermes/chat/participants/: __init__.py  base.py  debug_participant.py  llm_participant.py  user_participant.py
hermes/examples/: mock_responses.txt
hermes/interface/: __init__.py  base.py
hermes/interface/assistant/: llm_control_panel.py  llm_interface.py  llm_response_types.py  model_factory.py
hermes/interface/commands/: __init__.py  command.py  command_parser.py  help_generator.py
hermes/interface/control_panel/: __init__.py  base_control_panel.py  (+4 more)
hermes/mcp/: mcp_client.py  mcp_manager.py
hermes/utils/: binary_file.py  config_utils.py  file_extension.py  file_reader.py  filepath.py  overriding_printer.py  recording_generator.py  tree_generator.py
projects/: research_static_interface.py  static_interface.md
prompt_engineering/help/: fill-gaps.sh
prompt_engineering/notebook/: A.md  B.md  C.md
scripts/: activate.sh  debug_config.py  migrate_config.py  ruff_complexity_fixer.py  ruff_fixer.py  split_knowledgebase.py  test.sh
src/hermes/: chat_application.py  chat_ui.py  chunks.py  config.py  context_orchestrator.py  context_provider_loader.py  decorators.py  extension_loader.py  history_builder.py  main.py  model_factory.py  registry.py
src/tests/: test_append_context_provider.py  test_bedrock_prompt_builder.py  test_chat_application.py  test_chat_models.py  test_chat_ui.py  test_context_orchestrator.py  test_file_context_provider.py  test_file_processors.py  test_file_utils.py  test_fill_gaps_context_provider.py  test_image_context_provider.py  test_main.py  test_model_factory.py  test_prompt_formatters.py  test_text_context_provider.py  test_update_context_provider.py  test_url_context_provider.py  test_workflow_tasks.py  test_workflows.py  test_xml_prompt_builder.py
tasks/: workflow_support.md  workflow_tests.md
tests/: test_append_context_provider.py  test_bedrock_model.py  test_bedrock_prompt_builder.py  test_chat_application.py  test_chat_models.py  test_chat_ui.py  test_claude_prompt_builder.py  test_clipboard_context_provider.py  test_commands_extractor.py  test_default_file_processor.py  test_eml_context_provider.py  test_file_context_provider.py  test_gemini_model.py  test_help_context_provider.py  test_history_builder.py  test_image_context_provider.py  test_main.py  test_openai_model.py  test_prefill_context_provider.py  test_text_context_provider.py  test_update_context_provider.py  test_url_context_provider.py  test_vertex_model.py  test_xml_prompt_builder.py
tests/chat/: test_conversation_orchestrator.py
workflows/: pdf_to_markdown.yaml  test.yaml
(+744 files in other folders)
