[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes"
version = "0.1.1"
description = "An extendable CLI interface for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "boto3>=1.37.0",
    "exa-py>=1.7.3",
    "google-genai>=1.1.0",
    "google-generativeai>=0.8.3",
    "groq>=0.13.1",
    "inquirerpy>=0.3.4",
    "markitdown>=0.0.1a2",
    "mistune>=3.0.2",
    "numpy>=2.2.0",
    "openai>=1.62.0",
    "prompt-toolkit>=3.0.48",
    "pygments>=2.18.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.12.1",
]

[project.scripts]
hermes = "hermes.main:main"

[dependency-groups]
dev = [
    "ipython>=8.31.0",
]
